[gd_scene load_steps=16 format=2]

[ext_resource path="res://title_screen/buttons/HostGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/The_Tetris_Company_logo_2019.png" type="Texture" id=2]
[ext_resource path="res://title_screen/buttons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/olympic-pinup-calendar-russia-tarusov-9.png" type="Texture" id=5]
[ext_resource path="res://title_screen/Fade.tscn" type="PackedScene" id=6]
[ext_resource path="res://title_screen/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://assets/background_animated/background-frame1.png" type="Texture" id=8]
[ext_resource path="res://assets/background_animated/background-frame3.png" type="Texture" id=9]
[ext_resource path="res://assets/background_animated/background-frame2.png" type="Texture" id=10]
[ext_resource path="res://assets/background_animated/background-frame4.png" type="Texture" id=11]
[ext_resource path="res://assets/background_animated/background-frame5.png" type="Texture" id=12]
[ext_resource path="res://assets/background_animated/background-frame7.png" type="Texture" id=13]
[ext_resource path="res://assets/background_animated/background-frame6.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "background_animation"
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 8 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.10803
margin_top = 1.10803
margin_right = 1.10803
margin_bottom = 1.10803
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
anims/background_animation = SubResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -120.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_right = 1080.0
margin_bottom = 174.0
alignment = 1

[node name="Logo" type="TextureRect" parent="Menu/HBoxContainer"]
margin_left = 415.0
margin_right = 665.0
margin_bottom = 174.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 178.0
margin_right = 1080.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 538.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 40.0
margin_right = 538.0
margin_bottom = 100.0

[node name="HostGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 120.0
margin_right = 538.0
margin_bottom = 180.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 200.0
margin_right = 538.0
margin_bottom = 260.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 119.0
margin_right = 419.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 482.0
margin_right = 1080.0
margin_bottom = 520.0
size_flags_vertical = 7
text = "Version Alpha 0.0.1"
valign = 2

[node name="Fade" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]
[connection signal="fade_out_finished" from="Fade" to="." method="_on_Fade_fade_out_finished"]
